# breakout-tutorial

./: CMakeLists.txt
src/: main.cpp
src/game-logic/: CMakeLists.txt  game.h
src/rendering/: CMakeLists.txt  shader.cpp  shader.h  texture.cpp  texture.h
src/util/: CMakeLists.txt  resource_manager.cpp  resource_manager.h
